--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "caniuse-lite": "^1.0.30001660",
     "dotenv": "^16.4.5",
+    "interview-bot": "file:",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
