--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "bootstrap": "^5.3.3",
     "caniuse-lite": "^1.0.30001660",
     "dotenv": "^16.4.5",
     "interview-bot": "file:",
-    "next": "14.1.3",
+    "next": "^14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-audio-visualize": "^1.2.0",
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "eslint": "^8",
