--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "@tailwindcss/typography": "^0.5.15",
     "bootstrap": "^5.3.3",
     "caniuse-lite": "^1.0.30001660",
     "dotenv": "^16.4.5",
     "interview-bot": "file:",
+    "mongoose": "^8.7.3",
     "next": "^14.2.16",
+    "next-auth": "^4.24.10",
+    "next-nprogress-bar": "^2.3.14",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-audio-visualize": "^1.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
