--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.24.10",
     "next-nprogress-bar": "^2.3.14",
     "next-themes": "^0.3.0",
+    "pdf2json": "^3.1.4",
     "react": "^18",
     "react-audio-visualize": "^1.2.0",
     "react-dom": "^18",
